<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/car_row"
    android:layout_width="match_parent"
    android:layout_height="164dp">


    <ImageView
        android:id="@+id/row_image"
        android:layout_width="175dp"
        android:layout_height="164dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/vwgolf2" />

    <TextView
        android:id="@+id/row_verbrauch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/row_image"
        app:layout_constraintTop_toBottomOf="@+id/row_ps" />

    <TextView
        android:id="@+id/row_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/row_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_ps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/row_image"
        app:layout_constraintTop_toBottomOf="@+id/row_hersteller" />

    <TextView
        android:id="@+id/row_hersteller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/row_image"
        app:layout_constraintTop_toBottomOf="@+id/row_name" />

    <TextView
        android:id="@+id/VerbrauchKosten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>